3º Ano/PL/Project/Projeto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARGSEP
    COMMENT
    COMMENT2
    FUNIN
    FUNOUT
    LPAREN
    RPAREN

Grammar

Rule 0     S' -> exps
Rule 1     exps -> exps exp
Rule 2     exps -> empty
Rule 3     exp -> WORD
Rule 4     funStarted -> FUNCTIONSTART WORD
Rule 5     functionBody -> exps FUNCTIONEND
Rule 6     exp -> funStarted functionBody
Rule 7     exp -> ADD
Rule 8     exp -> SUB
Rule 9     exp -> MUL
Rule 10    exp -> DIV
Rule 11    exp -> MOD
Rule 12    exp -> LESSER
Rule 13    exp -> GREATER
Rule 14    exp -> DIFF
Rule 15    exp -> GREQUAL
Rule 16    exp -> LESEQUAL
Rule 17    exp -> EQUALS
Rule 18    exp -> IF exps THEN
Rule 19    exp -> IF exps ELSE exps THEN
Rule 20    exp -> CHAR WORD
Rule 21    exp -> PRINTDELIM
Rule 22    exp -> CR
Rule 23    exp -> SPACE
Rule 24    exp -> KEY
Rule 25    exp -> SPACES
Rule 26    exp -> EMIT
Rule 27    num -> NUMBER
Rule 28    exp -> num
Rule 29    exp -> POPPRINT
Rule 30    exp -> SWAP
Rule 31    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 7
ARGSEP               : 
CHAR                 : 20
COMMENT              : 
COMMENT2             : 
CR                   : 22
DIFF                 : 14
DIV                  : 10
ELSE                 : 19
EMIT                 : 26
EQUALS               : 17
FUNCTIONEND          : 5
FUNCTIONSTART        : 4
FUNIN                : 
FUNOUT               : 
GREATER              : 13
GREQUAL              : 15
IF                   : 18 19
KEY                  : 24
LESEQUAL             : 16
LESSER               : 12
LPAREN               : 
MOD                  : 11
MUL                  : 9
NUMBER               : 27
POPPRINT             : 29
PRINTDELIM           : 21
RPAREN               : 
SPACE                : 23
SPACES               : 25
SUB                  : 8
SWAP                 : 30
THEN                 : 18 19
WORD                 : 3 4 20
error                : 

Nonterminals, with rules where they appear

empty                : 2
exp                  : 1
exps                 : 1 5 18 19 19 0
funStarted           : 6
functionBody         : 6
num                  : 28

Parsing method: LALR

state 0

    (0) S' -> . exps
    (1) exps -> . exps exp
    (2) exps -> . empty
    (31) empty -> .

    WORD            reduce using rule 31 (empty -> .)
    ADD             reduce using rule 31 (empty -> .)
    SUB             reduce using rule 31 (empty -> .)
    MUL             reduce using rule 31 (empty -> .)
    DIV             reduce using rule 31 (empty -> .)
    MOD             reduce using rule 31 (empty -> .)
    LESSER          reduce using rule 31 (empty -> .)
    GREATER         reduce using rule 31 (empty -> .)
    DIFF            reduce using rule 31 (empty -> .)
    GREQUAL         reduce using rule 31 (empty -> .)
    LESEQUAL        reduce using rule 31 (empty -> .)
    EQUALS          reduce using rule 31 (empty -> .)
    IF              reduce using rule 31 (empty -> .)
    CHAR            reduce using rule 31 (empty -> .)
    PRINTDELIM      reduce using rule 31 (empty -> .)
    CR              reduce using rule 31 (empty -> .)
    SPACE           reduce using rule 31 (empty -> .)
    KEY             reduce using rule 31 (empty -> .)
    SPACES          reduce using rule 31 (empty -> .)
    EMIT            reduce using rule 31 (empty -> .)
    POPPRINT        reduce using rule 31 (empty -> .)
    SWAP            reduce using rule 31 (empty -> .)
    FUNCTIONSTART   reduce using rule 31 (empty -> .)
    NUMBER          reduce using rule 31 (empty -> .)
    $end            reduce using rule 31 (empty -> .)

    exps                           shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> exps .
    (1) exps -> exps . exp
    (3) exp -> . WORD
    (6) exp -> . funStarted functionBody
    (7) exp -> . ADD
    (8) exp -> . SUB
    (9) exp -> . MUL
    (10) exp -> . DIV
    (11) exp -> . MOD
    (12) exp -> . LESSER
    (13) exp -> . GREATER
    (14) exp -> . DIFF
    (15) exp -> . GREQUAL
    (16) exp -> . LESEQUAL
    (17) exp -> . EQUALS
    (18) exp -> . IF exps THEN
    (19) exp -> . IF exps ELSE exps THEN
    (20) exp -> . CHAR WORD
    (21) exp -> . PRINTDELIM
    (22) exp -> . CR
    (23) exp -> . SPACE
    (24) exp -> . KEY
    (25) exp -> . SPACES
    (26) exp -> . EMIT
    (28) exp -> . num
    (29) exp -> . POPPRINT
    (30) exp -> . SWAP
    (4) funStarted -> . FUNCTIONSTART WORD
    (27) num -> . NUMBER

    WORD            shift and go to state 4
    ADD             shift and go to state 6
    SUB             shift and go to state 7
    MUL             shift and go to state 8
    DIV             shift and go to state 9
    MOD             shift and go to state 10
    LESSER          shift and go to state 11
    GREATER         shift and go to state 12
    DIFF            shift and go to state 13
    GREQUAL         shift and go to state 14
    LESEQUAL        shift and go to state 15
    EQUALS          shift and go to state 16
    IF              shift and go to state 17
    CHAR            shift and go to state 18
    PRINTDELIM      shift and go to state 19
    CR              shift and go to state 20
    SPACE           shift and go to state 21
    KEY             shift and go to state 22
    SPACES          shift and go to state 23
    EMIT            shift and go to state 24
    POPPRINT        shift and go to state 26
    SWAP            shift and go to state 27
    FUNCTIONSTART   shift and go to state 28
    NUMBER          shift and go to state 29

    exp                            shift and go to state 3
    funStarted                     shift and go to state 5
    num                            shift and go to state 25

state 2

    (2) exps -> empty .

    WORD            reduce using rule 2 (exps -> empty .)
    ADD             reduce using rule 2 (exps -> empty .)
    SUB             reduce using rule 2 (exps -> empty .)
    MUL             reduce using rule 2 (exps -> empty .)
    DIV             reduce using rule 2 (exps -> empty .)
    MOD             reduce using rule 2 (exps -> empty .)
    LESSER          reduce using rule 2 (exps -> empty .)
    GREATER         reduce using rule 2 (exps -> empty .)
    DIFF            reduce using rule 2 (exps -> empty .)
    GREQUAL         reduce using rule 2 (exps -> empty .)
    LESEQUAL        reduce using rule 2 (exps -> empty .)
    EQUALS          reduce using rule 2 (exps -> empty .)
    IF              reduce using rule 2 (exps -> empty .)
    CHAR            reduce using rule 2 (exps -> empty .)
    PRINTDELIM      reduce using rule 2 (exps -> empty .)
    CR              reduce using rule 2 (exps -> empty .)
    SPACE           reduce using rule 2 (exps -> empty .)
    KEY             reduce using rule 2 (exps -> empty .)
    SPACES          reduce using rule 2 (exps -> empty .)
    EMIT            reduce using rule 2 (exps -> empty .)
    POPPRINT        reduce using rule 2 (exps -> empty .)
    SWAP            reduce using rule 2 (exps -> empty .)
    FUNCTIONSTART   reduce using rule 2 (exps -> empty .)
    NUMBER          reduce using rule 2 (exps -> empty .)
    $end            reduce using rule 2 (exps -> empty .)
    FUNCTIONEND     reduce using rule 2 (exps -> empty .)
    THEN            reduce using rule 2 (exps -> empty .)
    ELSE            reduce using rule 2 (exps -> empty .)


state 3

    (1) exps -> exps exp .

    WORD            reduce using rule 1 (exps -> exps exp .)
    ADD             reduce using rule 1 (exps -> exps exp .)
    SUB             reduce using rule 1 (exps -> exps exp .)
    MUL             reduce using rule 1 (exps -> exps exp .)
    DIV             reduce using rule 1 (exps -> exps exp .)
    MOD             reduce using rule 1 (exps -> exps exp .)
    LESSER          reduce using rule 1 (exps -> exps exp .)
    GREATER         reduce using rule 1 (exps -> exps exp .)
    DIFF            reduce using rule 1 (exps -> exps exp .)
    GREQUAL         reduce using rule 1 (exps -> exps exp .)
    LESEQUAL        reduce using rule 1 (exps -> exps exp .)
    EQUALS          reduce using rule 1 (exps -> exps exp .)
    IF              reduce using rule 1 (exps -> exps exp .)
    CHAR            reduce using rule 1 (exps -> exps exp .)
    PRINTDELIM      reduce using rule 1 (exps -> exps exp .)
    CR              reduce using rule 1 (exps -> exps exp .)
    SPACE           reduce using rule 1 (exps -> exps exp .)
    KEY             reduce using rule 1 (exps -> exps exp .)
    SPACES          reduce using rule 1 (exps -> exps exp .)
    EMIT            reduce using rule 1 (exps -> exps exp .)
    POPPRINT        reduce using rule 1 (exps -> exps exp .)
    SWAP            reduce using rule 1 (exps -> exps exp .)
    FUNCTIONSTART   reduce using rule 1 (exps -> exps exp .)
    NUMBER          reduce using rule 1 (exps -> exps exp .)
    $end            reduce using rule 1 (exps -> exps exp .)
    FUNCTIONEND     reduce using rule 1 (exps -> exps exp .)
    THEN            reduce using rule 1 (exps -> exps exp .)
    ELSE            reduce using rule 1 (exps -> exps exp .)


state 4

    (3) exp -> WORD .

    WORD            reduce using rule 3 (exp -> WORD .)
    ADD             reduce using rule 3 (exp -> WORD .)
    SUB             reduce using rule 3 (exp -> WORD .)
    MUL             reduce using rule 3 (exp -> WORD .)
    DIV             reduce using rule 3 (exp -> WORD .)
    MOD             reduce using rule 3 (exp -> WORD .)
    LESSER          reduce using rule 3 (exp -> WORD .)
    GREATER         reduce using rule 3 (exp -> WORD .)
    DIFF            reduce using rule 3 (exp -> WORD .)
    GREQUAL         reduce using rule 3 (exp -> WORD .)
    LESEQUAL        reduce using rule 3 (exp -> WORD .)
    EQUALS          reduce using rule 3 (exp -> WORD .)
    IF              reduce using rule 3 (exp -> WORD .)
    CHAR            reduce using rule 3 (exp -> WORD .)
    PRINTDELIM      reduce using rule 3 (exp -> WORD .)
    CR              reduce using rule 3 (exp -> WORD .)
    SPACE           reduce using rule 3 (exp -> WORD .)
    KEY             reduce using rule 3 (exp -> WORD .)
    SPACES          reduce using rule 3 (exp -> WORD .)
    EMIT            reduce using rule 3 (exp -> WORD .)
    POPPRINT        reduce using rule 3 (exp -> WORD .)
    SWAP            reduce using rule 3 (exp -> WORD .)
    FUNCTIONSTART   reduce using rule 3 (exp -> WORD .)
    NUMBER          reduce using rule 3 (exp -> WORD .)
    $end            reduce using rule 3 (exp -> WORD .)
    FUNCTIONEND     reduce using rule 3 (exp -> WORD .)
    THEN            reduce using rule 3 (exp -> WORD .)
    ELSE            reduce using rule 3 (exp -> WORD .)


state 5

    (6) exp -> funStarted . functionBody
    (5) functionBody -> . exps FUNCTIONEND
    (1) exps -> . exps exp
    (2) exps -> . empty
    (31) empty -> .

    FUNCTIONEND     reduce using rule 31 (empty -> .)
    WORD            reduce using rule 31 (empty -> .)
    ADD             reduce using rule 31 (empty -> .)
    SUB             reduce using rule 31 (empty -> .)
    MUL             reduce using rule 31 (empty -> .)
    DIV             reduce using rule 31 (empty -> .)
    MOD             reduce using rule 31 (empty -> .)
    LESSER          reduce using rule 31 (empty -> .)
    GREATER         reduce using rule 31 (empty -> .)
    DIFF            reduce using rule 31 (empty -> .)
    GREQUAL         reduce using rule 31 (empty -> .)
    LESEQUAL        reduce using rule 31 (empty -> .)
    EQUALS          reduce using rule 31 (empty -> .)
    IF              reduce using rule 31 (empty -> .)
    CHAR            reduce using rule 31 (empty -> .)
    PRINTDELIM      reduce using rule 31 (empty -> .)
    CR              reduce using rule 31 (empty -> .)
    SPACE           reduce using rule 31 (empty -> .)
    KEY             reduce using rule 31 (empty -> .)
    SPACES          reduce using rule 31 (empty -> .)
    EMIT            reduce using rule 31 (empty -> .)
    POPPRINT        reduce using rule 31 (empty -> .)
    SWAP            reduce using rule 31 (empty -> .)
    FUNCTIONSTART   reduce using rule 31 (empty -> .)
    NUMBER          reduce using rule 31 (empty -> .)

    functionBody                   shift and go to state 30
    exps                           shift and go to state 31
    empty                          shift and go to state 2

state 6

    (7) exp -> ADD .

    WORD            reduce using rule 7 (exp -> ADD .)
    ADD             reduce using rule 7 (exp -> ADD .)
    SUB             reduce using rule 7 (exp -> ADD .)
    MUL             reduce using rule 7 (exp -> ADD .)
    DIV             reduce using rule 7 (exp -> ADD .)
    MOD             reduce using rule 7 (exp -> ADD .)
    LESSER          reduce using rule 7 (exp -> ADD .)
    GREATER         reduce using rule 7 (exp -> ADD .)
    DIFF            reduce using rule 7 (exp -> ADD .)
    GREQUAL         reduce using rule 7 (exp -> ADD .)
    LESEQUAL        reduce using rule 7 (exp -> ADD .)
    EQUALS          reduce using rule 7 (exp -> ADD .)
    IF              reduce using rule 7 (exp -> ADD .)
    CHAR            reduce using rule 7 (exp -> ADD .)
    PRINTDELIM      reduce using rule 7 (exp -> ADD .)
    CR              reduce using rule 7 (exp -> ADD .)
    SPACE           reduce using rule 7 (exp -> ADD .)
    KEY             reduce using rule 7 (exp -> ADD .)
    SPACES          reduce using rule 7 (exp -> ADD .)
    EMIT            reduce using rule 7 (exp -> ADD .)
    POPPRINT        reduce using rule 7 (exp -> ADD .)
    SWAP            reduce using rule 7 (exp -> ADD .)
    FUNCTIONSTART   reduce using rule 7 (exp -> ADD .)
    NUMBER          reduce using rule 7 (exp -> ADD .)
    $end            reduce using rule 7 (exp -> ADD .)
    FUNCTIONEND     reduce using rule 7 (exp -> ADD .)
    THEN            reduce using rule 7 (exp -> ADD .)
    ELSE            reduce using rule 7 (exp -> ADD .)


state 7

    (8) exp -> SUB .

    WORD            reduce using rule 8 (exp -> SUB .)
    ADD             reduce using rule 8 (exp -> SUB .)
    SUB             reduce using rule 8 (exp -> SUB .)
    MUL             reduce using rule 8 (exp -> SUB .)
    DIV             reduce using rule 8 (exp -> SUB .)
    MOD             reduce using rule 8 (exp -> SUB .)
    LESSER          reduce using rule 8 (exp -> SUB .)
    GREATER         reduce using rule 8 (exp -> SUB .)
    DIFF            reduce using rule 8 (exp -> SUB .)
    GREQUAL         reduce using rule 8 (exp -> SUB .)
    LESEQUAL        reduce using rule 8 (exp -> SUB .)
    EQUALS          reduce using rule 8 (exp -> SUB .)
    IF              reduce using rule 8 (exp -> SUB .)
    CHAR            reduce using rule 8 (exp -> SUB .)
    PRINTDELIM      reduce using rule 8 (exp -> SUB .)
    CR              reduce using rule 8 (exp -> SUB .)
    SPACE           reduce using rule 8 (exp -> SUB .)
    KEY             reduce using rule 8 (exp -> SUB .)
    SPACES          reduce using rule 8 (exp -> SUB .)
    EMIT            reduce using rule 8 (exp -> SUB .)
    POPPRINT        reduce using rule 8 (exp -> SUB .)
    SWAP            reduce using rule 8 (exp -> SUB .)
    FUNCTIONSTART   reduce using rule 8 (exp -> SUB .)
    NUMBER          reduce using rule 8 (exp -> SUB .)
    $end            reduce using rule 8 (exp -> SUB .)
    FUNCTIONEND     reduce using rule 8 (exp -> SUB .)
    THEN            reduce using rule 8 (exp -> SUB .)
    ELSE            reduce using rule 8 (exp -> SUB .)


state 8

    (9) exp -> MUL .

    WORD            reduce using rule 9 (exp -> MUL .)
    ADD             reduce using rule 9 (exp -> MUL .)
    SUB             reduce using rule 9 (exp -> MUL .)
    MUL             reduce using rule 9 (exp -> MUL .)
    DIV             reduce using rule 9 (exp -> MUL .)
    MOD             reduce using rule 9 (exp -> MUL .)
    LESSER          reduce using rule 9 (exp -> MUL .)
    GREATER         reduce using rule 9 (exp -> MUL .)
    DIFF            reduce using rule 9 (exp -> MUL .)
    GREQUAL         reduce using rule 9 (exp -> MUL .)
    LESEQUAL        reduce using rule 9 (exp -> MUL .)
    EQUALS          reduce using rule 9 (exp -> MUL .)
    IF              reduce using rule 9 (exp -> MUL .)
    CHAR            reduce using rule 9 (exp -> MUL .)
    PRINTDELIM      reduce using rule 9 (exp -> MUL .)
    CR              reduce using rule 9 (exp -> MUL .)
    SPACE           reduce using rule 9 (exp -> MUL .)
    KEY             reduce using rule 9 (exp -> MUL .)
    SPACES          reduce using rule 9 (exp -> MUL .)
    EMIT            reduce using rule 9 (exp -> MUL .)
    POPPRINT        reduce using rule 9 (exp -> MUL .)
    SWAP            reduce using rule 9 (exp -> MUL .)
    FUNCTIONSTART   reduce using rule 9 (exp -> MUL .)
    NUMBER          reduce using rule 9 (exp -> MUL .)
    $end            reduce using rule 9 (exp -> MUL .)
    FUNCTIONEND     reduce using rule 9 (exp -> MUL .)
    THEN            reduce using rule 9 (exp -> MUL .)
    ELSE            reduce using rule 9 (exp -> MUL .)


state 9

    (10) exp -> DIV .

    WORD            reduce using rule 10 (exp -> DIV .)
    ADD             reduce using rule 10 (exp -> DIV .)
    SUB             reduce using rule 10 (exp -> DIV .)
    MUL             reduce using rule 10 (exp -> DIV .)
    DIV             reduce using rule 10 (exp -> DIV .)
    MOD             reduce using rule 10 (exp -> DIV .)
    LESSER          reduce using rule 10 (exp -> DIV .)
    GREATER         reduce using rule 10 (exp -> DIV .)
    DIFF            reduce using rule 10 (exp -> DIV .)
    GREQUAL         reduce using rule 10 (exp -> DIV .)
    LESEQUAL        reduce using rule 10 (exp -> DIV .)
    EQUALS          reduce using rule 10 (exp -> DIV .)
    IF              reduce using rule 10 (exp -> DIV .)
    CHAR            reduce using rule 10 (exp -> DIV .)
    PRINTDELIM      reduce using rule 10 (exp -> DIV .)
    CR              reduce using rule 10 (exp -> DIV .)
    SPACE           reduce using rule 10 (exp -> DIV .)
    KEY             reduce using rule 10 (exp -> DIV .)
    SPACES          reduce using rule 10 (exp -> DIV .)
    EMIT            reduce using rule 10 (exp -> DIV .)
    POPPRINT        reduce using rule 10 (exp -> DIV .)
    SWAP            reduce using rule 10 (exp -> DIV .)
    FUNCTIONSTART   reduce using rule 10 (exp -> DIV .)
    NUMBER          reduce using rule 10 (exp -> DIV .)
    $end            reduce using rule 10 (exp -> DIV .)
    FUNCTIONEND     reduce using rule 10 (exp -> DIV .)
    THEN            reduce using rule 10 (exp -> DIV .)
    ELSE            reduce using rule 10 (exp -> DIV .)


state 10

    (11) exp -> MOD .
